@@ -1,4 +1,4 @@
-from .meteo_producer import MeteoKafkaProducer
+from .meteo_producer_not_used import MeteoKafkaProducer
 from .extract_meteo_csv import ExtractMeteoDataCSV
 from.extract_station_csv import ExtractStationDataCSV
 from .extract import Extract
