@@ -7,6 +7,14 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Added
+
+- add logger
+
+
+### Changed
+
+
 ## [0.1]
 
 ### Added
